--- a/src/locales/ru/footer.json
+++ b/src/locales/ru/footer.json
@@ -13,28 +13,28 @@
   },
   "about": {
     "title": "О нас",
-    "links": {
-      "1": "О компании",
-      "2": "Вакансии",
-      "3": "Программа бета-тестирования",
-      "4": "Информация для партнеров",
-      "5": "Размещение рекламы",
-      "6": "Пользовательское соглашение",
-      "7": "Политика конфиденциальности",
-      "8": "Комплаенс"
-    }
+    "links": [
+      "О компании",
+      "Вакансии",
+      "Программа бета-тестирования",
+      "Информация для партнеров",
+      "Размещение рекламы",
+      "Пользовательское соглашение",
+      "Политика конфиденциальности",
+      "Комплаенс"
+    ]
   },
   "sections": {
     "title": "Разделы",
-    "links": {
-      "1": "Мой Иви",
-      "2": "Что нового",
-      "3": "Фильмы",
-      "4": "Сериалы",
-      "5": "Мультфильмы",
-      "6": "TV+",
-      "7": "Что посмотреть"
-    }
+    "links": [
+      "Мой Иви",
+      "Что нового",
+      "Фильмы",
+      "Сериалы",
+      "Мультфильмы",
+      "TV+",
+      "Что посмотреть"
+    ]
   },
   "appstore": "Зарузить в",
   "google": "Доступно в",
