genre, country and year filters
- feat: improve filter sliders
- feat: add genre filter
- feat: add country filter
- feat: add year filter
- feat: add genres, countries and filters translations

--- a/src/locales/ru/genres.json
+++ b/src/locales/ru/genres.json
@@ -1,3 +1,16 @@
 {
-  "drama": "Драма"
+  "drama": "Драмы",
+  "comedy": "Комедии",
+  "thriller": "Триллеры",
+  "western": "Вестерны",
+  "adventure": "Приключения",
+  "arthouse": "Артхаус",
+  "children": "Для детей",
+  "foreign": "Зарубежные",
+  "mystic": "Мистика",
+  "ussr": "Советские",
+  "horror": "Ужасы",
+  "biography": "Биография",
+  "military": "Военные",
+  "action": "Боевики"
 }
