--- a/src/locales/en/genres.json
+++ b/src/locales/en/genres.json
@@ -1,3 +1,16 @@
 {
-  "drama": "Drama"
+  "drama": "Drama",
+  "comedy": "Comedy",
+  "thriller": "Thriller",
+  "western": "Western",
+  "adventure": "Adventure",
+  "arthouse": "Art Film",
+  "children": "For children",
+  "foreign": "Foreign",
+  "mystic": "Mystic",
+  "ussr": "Soviet",
+  "horror": "Horror",
+  "biography": "Biography",
+  "military": "Military",
+  "action": "Action"
 }
