rating, rating count and person filters
- feat: add rating filter
- feat: add ratings count filter
- feat: add actor and director inputs
- feat: add reset filters button
- fix: code style problems
- refactor: filter slider decomposition

--- a/src/locales/ru/filters.json
+++ b/src/locales/ru/filters.json
@@ -13,5 +13,13 @@
     "2018": "2018 год",
     "2017": "2017 год",
     "2016": "2016 год"
-  }
+  },
+  "rating": "Рейтинг кинопоиска",
+  "ratingCount": "Количество оценок",
+  "from": "от",
+  "person": {
+    "actor": "Актеры",
+    "director": "Режиссеры"
+  },
+  "reset": "Сбросить фильтры"
 }
