--- a/src/locales/en/filters.json
+++ b/src/locales/en/filters.json
@@ -13,5 +13,13 @@
     "2018": "2018 year",
     "2017": "2017 year",
     "2016": "2016 year"
-  }
+  },
+  "rating": "Kinopoisk rating",
+  "ratingCount": "Ratings count",
+  "from": "from",
+  "person": {
+    "actor": "Actors",
+    "director": "Directors"
+  },
+  "reset": "Reset filters"
 }
