refactor: class names

--- a/src/locales/ru/movie.json
+++ b/src/locales/ru/movie.json
@@ -4,6 +4,10 @@
     "estimate": "Оценить",
     "grades": "оценок"
   },
+  "medallions": {
+    "rating": "Рейтинг",
+    "ivi": "Иви"
+  },
   "details": {
     "show": "Показать детали",
     "hide": "Свернуть детали",
