--- a/src/locales/en/movie.json
+++ b/src/locales/en/movie.json
@@ -4,6 +4,10 @@
     "estimate": "Estimate",
     "grades": "amount grades"
   },
+  "medallions": {
+    "rating": "Rating",
+    "ivi": "Ivi"
+  },
   "details": {
     "show": "Show details",
     "hide": "Hide details",
