feat: comments list modal

--- a/src/locales/en/header.json
+++ b/src/locales/en/header.json
@@ -1,5 +1,6 @@
 {
   "navigation": ["My Ivi","What's new","Movies","Series","Cartoons"],
+  "genreTitles": ["Genres","Countries","Years"],
   "tabs": {
     "movies": [
       "New items",
