--- a/src/locales/ru/header.json
+++ b/src/locales/ru/header.json
@@ -1,5 +1,6 @@
 {
   "navigation": ["Мой Иви","Что нового","Фильмы","Сериалы","Мультфильмы"],
+  "genreTitles": ["Жанры","Страны","Года"],
   "tabs": {
     "movies": [
       "Новинки",
