--- a/src/locales/ru/movie.json
+++ b/src/locales/ru/movie.json
@@ -34,5 +34,9 @@
     "title": "на всех устройствах",
     "text": "Приложение доступно для скачивания на iOS, Android, SmartTV и приставках",
     "button": "Подключить устройства"
+  },
+  "related": {
+    "with": "С фильмом",
+    "watch": "смотрят так же"
   }
 }
