feat: add free subscribe button

--- a/src/locales/en/header.json
+++ b/src/locales/en/header.json
@@ -51,5 +51,6 @@
   },
   "notification": "Only important messages appear here",
   "search": "Search",
-  "subscription" : "Buy subscription"
+  "subscription" : "Buy subscription",
+  "freeSubscription" : "Watch 30 days for free"
 }
