--- a/src/locales/ru/header.json
+++ b/src/locales/ru/header.json
@@ -51,5 +51,6 @@
   },
   "notification": "Здесь появляются только важные сообщения",
   "search" : "Поиск",
-  "subscription" : "Оплатить подписку"
+  "subscription" : "Оплатить подписку",
+  "freeSubscription" : "Смотреть 30 дней бесплатно"
 }
