feat: add translations to comments slider

--- a/src/locales/en/movie.json
+++ b/src/locales/en/movie.json
@@ -38,5 +38,9 @@
   "related": {
     "with": "With film",
     "watch": "watch the same"
+  },
+  "comments": {
+    "comments": "Comments",
+    "leave": "Leave a comment"
   }
 }
