--- a/src/locales/ru/movie.json
+++ b/src/locales/ru/movie.json
@@ -38,5 +38,9 @@
   "related": {
     "with": "С фильмом",
     "watch": "смотрят так же"
+  },
+  "comments": {
+    "comments": "Комментарии",
+    "leave": "Оставить комментарий"
   }
 }
