--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,3 +1,12 @@
 {
-  "hello": "hello"
+  "breadcrumbs": {
+    "/": "Home",
+    "/movies/": "Movies"
+  },
+  "tooltips": {
+    "save": "Watch later",
+    "similar": "Similar",
+    "estimate": "Already watched, rate",
+    "block": "Don't like this"
+  }
 }
