--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -1,3 +1,12 @@
 {
-  "hello": "привет"
+  "breadcrumbs": {
+    "/": "Главная",
+    "/movies/": "Фильмы"
+  },
+  "tooltips": {
+    "save": "Смотреть позже",
+    "similar": "Похожее",
+    "estimate": "Уже смотрел, оценить",
+    "block": "Не нравится такое"
+  }
 }
