feat: add, adaptive to movieInfoModal, add translation to genres

--- a/public/locales/ru/genres.json
+++ b/public/locales/ru/genres.json
@@ -1,16 +1,30 @@
 {
   "drama": "Драмы",
-  "comedy": "Комедии",
-  "thriller": "Триллеры",
-  "western": "Вестерны",
-  "adventure": "Приключения",
+  "fentezi": "Фентези",
+  "kriminal": "Криминал",
+  "istoriya": "История",
+  "priklyucheniya": "Приключения",
+  "komediya": "Комедии",
+  "melodrama": "Мелодрама",
+  "anime": "Аниме",
+  "multfilm": "Мультфильмы",
+  "boevik": "Боевики",
+  "biografiya": "Биография",
+  "fantastika": "Фантастика",
+  "triller": "Триллеры",
+  "voennyy": "Военные",
+  "vestern": "Вестерны",
+  "semeynyy": "Семейные",
+  "film-nuar": "Фильмы-нуар",
+  "muzyka": "Музыка",
+  "uzhasy": "Ужасы",
+  "detektiv": "Детективы",
   "arthouse": "Артхаус",
-  "children": "Для детей",
-  "foreign": "Зарубежные",
-  "mystic": "Мистика",
-  "ussr": "Советские",
-  "horror": "Ужасы",
-  "biography": "Биография",
-  "military": "Военные",
-  "action": "Боевики"
+  "myuzikl": "Мьюзиклы",
+  "dokumentalnyy": "Документальные",
+  "sport": "Спорт",
+  "korotkometrazhka": "Короткометражные",
+  "realnoe-tv": "Реальное ТВ",
+  "dlya-vzroslyh": "Для взрослых",
+  "detskiy": "Для детей"
 }
