feat: add Switch language to header

--- a/public/locales/en/genres.json
+++ b/public/locales/en/genres.json
@@ -8,7 +8,7 @@
   "melodrama": "Melodrama",
   "anime": "Anime",
   "multfilm": "Cartoons",
-  "boevik": "Militants",
+  "boevik": "Action",
   "biografiya": "Biography",
   "fantastika": "Fantastic",
   "triller": "Thrillers",
