--- a/public/locales/ru/dropDownCategory.json
+++ b/public/locales/ru/dropDownCategory.json
@@ -1,5 +1,28 @@
 {
   "movies": {
+    "genres": [
+      "Драмы",
+      "Фентези",
+      "История",
+      "Приключения",
+      "Комедии",
+      "Мелодрама",
+      "Боевики",
+      "Фантастика",
+      "Триллеры",
+      "Военные",
+      "Вестерны",
+      "Семейные",
+      "Фильмы-нуар",
+      "Музыка",
+      "Ужасы",
+      "Детективы",
+      "Артхаус",
+      "Документальные",
+      "Спорт",
+      "Короткометражные",
+      "Для взрослых"
+    ],
     "countries": [
       "Русские",
       "Зарубежные",
@@ -10,9 +33,36 @@
       "Фильмы 2022 года",
       "Фильмы 2021 года",
       "Фильмы 2020 года"
+    ],
+    "a": [
+      "1","2"
     ]
   },
   "series": {
+    "genres": [
+      "Семейные",
+      "Музыка",
+      "Ужасы",
+      "Детективы",
+      "Артхаус",
+      "Мьюзиклы",
+      "Драмы",
+      "Фентези",
+      "Криминал",
+      "Мультфильмы",
+      "Боевики",
+      "Фантастика",
+      "Короткометражные",
+      "Для взрослых",
+      "Для детей",
+      "Триллеры",
+      "Военные",
+      "Вестерны",
+      "История",
+      "Приключения",
+      "Комедии",
+      "Аниме"
+    ],
     "countries": [
       "Русские",
       "Зарубежные",
@@ -29,6 +79,29 @@
     ]
   },
   "cartoons": {
+    "genres": [
+      "Аниме",
+      "Драмы",
+      "Фентези",
+      "Криминал",
+      "История",
+      "Приключения",
+      "Комедии",
+      "Мелодрама",
+      "Мультфильмы",
+      "Боевики",
+      "Биография",
+      "Фантастика",
+      "Триллеры",
+      "Военные",
+      "Вестерны",
+      "Семейные",
+      "Музыка",
+      "Ужасы",
+      "Артхаус",
+      "Мьюзиклы",
+      "Для детей"
+    ],
     "countries": [
       "Советские",
       "Русские",
