--- a/public/locales/en/dropDownCategory.json
+++ b/public/locales/en/dropDownCategory.json
@@ -1,5 +1,28 @@
 {
   "movies": {
+    "genres": [
+      "Dramas",
+      "Fantasy",
+      "Historical",
+      "Adventures",
+      "Comedy",
+      "Melodrama",
+      "Action",
+      "Fantastic",
+      "Thrillers",
+      "Military",
+      "Westerns",
+      "Family",
+      "Film noir",
+      "Music",
+      "Horrors",
+      "Detective",
+      "Art house",
+      "Documentary",
+      "Sport",
+      "Shorts",
+      "For Adults"
+    ],
     "countries": [
       "Russian",
       "Foreign",
@@ -13,6 +36,30 @@
     ]
   },
   "series": {
+    "genres": [
+      "Family",
+      "Music",
+      "Horrors",
+      "Detective",
+      "Art house",
+      "Musicals",
+      "Dramas",
+      "Fantasy",
+      "Criminal",
+      "Cartoons",
+      "Action",
+      "Fantastic",
+      "Shorts",
+      "For Adults",
+      "For children",
+      "Thrillers",
+      "Military",
+      "Westerns",
+      "Historical",
+      "Adventures",
+      "Comedy",
+      "Anime"
+    ],
     "countries": [
       "Russian",
       "Foreign",
@@ -29,6 +76,23 @@
     ]
   },
   "cartoons": {
+    "genres": [
+      "Anime",
+      "Dramas",
+      "Fantasy",
+      "Criminal",
+      "Historical",
+      "Adventures",
+      "Comedy",
+      "Cartoons",
+      "Fantastic",
+      "Family",
+      "Music",
+      "Horrors",
+      "Art house",
+      "Musical",
+      "For children"
+    ],
     "countries": [
       "Soviet",
       "Russian",
