feat: backend filters

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -8,5 +8,6 @@
     "similar": "Similar",
     "estimate": "Already watched, rate",
     "block": "Don't like this"
-  }
+  },
+  "more": "Show more"
 }
