--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -8,5 +8,6 @@
     "similar": "Похожее",
     "estimate": "Уже смотрел, оценить",
     "block": "Не нравится такое"
-  }
+  },
+  "more": "Показать еще"
 }
