feat: some person page improvements

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,7 +1,8 @@
 {
   "breadcrumbs": {
     "/": "Home",
-    "/movies/": "Movies"
+    "/movies/": "Movies",
+    "/person": "Actor"
   },
   "tooltips": {
     "save": "Watch later",
