--- a/public/locales/en/person.json
+++ b/public/locales/en/person.json
@@ -2,5 +2,6 @@
   "backLink": "Back",
   "filmography": "Full filmography",
   "rating": "Rating Ivi",
-  "movieButton": "Details"
+  "movieButton": "Details",
+  "showButton": "Show"
 }
