--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -1,7 +1,8 @@
 {
   "breadcrumbs": {
     "/": "Главная",
-    "/movies/": "Фильмы"
+    "/movies/": "Фильмы",
+    "/person/": "Актёр"
   },
   "tooltips": {
     "save": "Смотреть позже",
