--- a/public/locales/ru/person.json
+++ b/public/locales/ru/person.json
@@ -2,5 +2,6 @@
   "backLink": "Назад",
   "filmography": "Полная фильмография",
   "rating": "Рейтинг Иви",
-  "movieButton": "Подробнее"
+  "movieButton": "Подробнее",
+  "showButton": "Ещё"
 }
