refactor: genres and countries translation

--- a/public/locales/en/genres.json
+++ b/public/locales/en/genres.json
@@ -4,16 +4,16 @@
   "criminal": "Criminal",
   "history": "Historical",
   "adventure": "Adventures",
-  "komediya": "Comedy",
+  "comedy": "Comedy",
   "melodrama": "Melodrama",
   "anime": "Anime",
   "animatedfilm": "Cartoons",
-  "boevik": "Action",
+  "militant": "Action",
   "biography": "Biography",
-  "fantastic": "Fantastic",
-  "triller": "Thrillers",
+  "fiction": "Fantastic",
+  "thriller": "Thrillers",
   "military": "Military",
-  "vestern": "Westerns",
+  "western": "Westerns",
   "family": "Family",
   "filmnoir": "Film noir",
   "music": "Music",
@@ -24,7 +24,7 @@
   "documentary": "Documentary",
   "sport": "Sport",
   "shortfilm": "Shorts",
-  "adult": "For Adults",
-  "children": "For children",
-  "realitytv": "Reality TV"
+  "realitytv": "Reality TV",
+  "adults": "For Adults",
+  "children": "For children"
 }
