--- a/public/locales/ru/genres.json
+++ b/public/locales/ru/genres.json
@@ -1,30 +1,30 @@
 {
   "drama": "Драмы",
-  "fentezi": "Фентези",
-  "kriminal": "Криминал",
-  "istoriya": "История",
-  "priklyucheniya": "Приключения",
-  "komediya": "Комедии",
+  "fantasy": "Фентези",
+  "criminal": "Криминал",
+  "history": "История",
+  "adventure": "Приключения",
+  "comedy": "Комедии",
   "melodrama": "Мелодрама",
   "anime": "Аниме",
-  "multfilm": "Мультфильмы",
-  "boevik": "Боевики",
-  "biografiya": "Биография",
-  "fantastika": "Фантастика",
-  "triller": "Триллеры",
-  "voennyy": "Военные",
-  "vestern": "Вестерны",
-  "semeynyy": "Семейные",
-  "film-nuar": "Фильмы-нуар",
-  "muzyka": "Музыка",
-  "uzhasy": "Ужасы",
-  "detektiv": "Детективы",
+  "animatedfilm": "Мультфильмы",
+  "militant": "Боевики",
+  "biography": "Биография",
+  "fiction": "Фантастика",
+  "thriller": "Триллеры",
+  "military": "Военные",
+  "western": "Вестерны",
+  "family": "Семейные",
+  "filmnoir": "Фильмы-нуар",
+  "music": "Музыка",
+  "horror": "Ужасы",
+  "detective": "Детективы",
   "arthouse": "Артхаус",
-  "myuzikl": "Мьюзиклы",
-  "dokumentalnyy": "Документальные",
+  "musical": "Мьюзиклы",
+  "documentary": "Документальные",
   "sport": "Спорт",
-  "korotkometrazhka": "Короткометражные",
-  "realnoe-tv": "Реальное ТВ",
-  "dlya-vzroslyh": "Для взрослых",
-  "detskiy": "Для детей"
+  "shortfilm": "Короткометражные",
+  "realitytv": "Реальное ТВ",
+  "adults": "Для взрослых",
+  "children": "Для детей"
 }
