--- a/public/locales/ru/filters.json
+++ b/public/locales/ru/filters.json
@@ -14,7 +14,7 @@
   "reset": "Сбросить фильтры",
   "all": {
     "genres": "Все жанры",
-    "country": "Все страны",
+    "countries": "Все страны",
     "year": "Все года",
     "rating": "Любой рейтинг",
     "assessments": "Любое количество оценок",
