feat: add links to genres/countries/years

--- a/public/locales/en/countries.json
+++ b/public/locales/en/countries.json
@@ -1,38 +1,50 @@
 {
-  "aus": "Australia",
-  "arg": "Argentina",
-  "arm": "Armenia",
-  "bel": "Belarus",
-  "belg": "Belgium",
-  "bra": "Brazil",
-  "greatbr": "Great Britain",
-  "hung": "Hungary",
-  "ger": "Germany",
-  "hong": "Hong Kong",
-  "denm": "Denmark",
+  "australia": "Australia",
+  "argentina": "Argentina",
+  "austria": "Austria",
+  "armenia": "Armenia",
+  "belarus": "Belarus",
+  "belgium": "Belgium",
+  "brazil": "Brazil",
+  "britain": "Great Britain",
+  "hungary": "Hungary",
+  "germany": "Germany",
+  "germanygdr": "Germany (GDR)",
+  "germanyfrg": "Germany (FRG)",
+  "hongkong": "Hong Kong",
+  "denmark": "Denmark",
   "india": "India",
-  "irel": "Ireland",
-  "spa": "Spain",
-  "ita": "Italy",
-  "kaz": "Kazakhstan",
-  "can": "Canada",
+  "egipt": "Egypt",
+  "ireland": "Ireland",
+  "spain": "Spain",
+  "italy": "Italy",
+  "kazakhstan": "Kazakhstan",
+  "canada": "Canada",
   "china": "China",
-  "col": "Colombia",
-  "mex": "Mexico",
-  "neth": "Netherlands",
-  "newzel": "New Zealand",
-  "norw": "Norway",
-  "pol": "Poland",
-  "rus": "Russia",
+  "cuba": "Cuba",
+  "czechia": "Czechia",
+  "colombia": "Colombia",
+  "latvia": "Latvia",
+  "mexico": "Mexico",
+  "netherlands": "Netherlands",
+  "newzeland": "New Zealand",
+  "norway": "Norway",
+  "poland": "Poland",
+  "russia": "Russia",
   "ussr": "USSR",
   "usa": "USA",
-  "thai": "Thailand",
-  "turk": "Turkey",
-  "fin": "Finland",
-  "fra": "France",
-  "switz": "Switzerland",
-  "swed": "Sweden",
-  "southaf": "SOUTH AFRICA",
-  "southkr": "South Korea",
-  "jap": "Japan"
+  "thailand": "Thailand",
+  "turkey": "Turkey",
+  "finland": "Finland",
+  "france": "France",
+  "switzerland": "Switzerland",
+  "sweden": "Sweden",
+  "southafrica": "SOUTH AFRICA",
+  "southkorea": "South Korea",
+  "japan": "Japan",
+  "yugoslavia": "Yugoslavia",
+  "yugoslaviafr": "Yugoslavia (FR)",
+  "taiwan": "Taiwan",
+  "iran": "Iran",
+  "panama": "Panama"
 }
