--- a/public/locales/en/dropDownCategory.json
+++ b/public/locales/en/dropDownCategory.json
@@ -1,31 +1,30 @@
 {
   "movies": {
     "genres": [
-      "Dramas",
+      "Drama",
       "Fantasy",
-      "Historical",
-      "Adventures",
+      "History",
+      "Adventure",
       "Comedy",
       "Melodrama",
-      "Action",
-      "Fantastic",
-      "Thrillers",
+      "Militant",
+      "Fiction",
+      "Thriller",
       "Military",
-      "Westerns",
+      "Western",
       "Family",
       "Film noir",
       "Music",
-      "Horrors",
+      "Horror",
       "Detective",
-      "Art house",
       "Documentary",
       "Sport",
-      "Shorts",
+      "Short Film",
       "For Adults"
     ],
     "countries": [
       "Russian",
-      "Foreign",
+      "American",
       "Soviet movie"
     ],
     "years": [
@@ -39,24 +38,23 @@
     "genres": [
       "Family",
       "Music",
-      "Horrors",
+      "Horror",
       "Detective",
-      "Art house",
-      "Musicals",
-      "Dramas",
+      "Musical",
+      "Drama",
       "Fantasy",
       "Criminal",
       "Cartoons",
       "Action",
-      "Fantastic",
-      "Shorts",
+      "Fiction",
+      "Short Film",
       "For Adults",
-      "For children",
-      "Thrillers",
+      "Children's",
+      "Thriller",
       "Military",
-      "Westerns",
+      "Western",
       "Historical",
-      "Adventures",
+      "Adventure",
       "Comedy",
       "Anime"
     ],
@@ -78,20 +76,19 @@
   "cartoons": {
     "genres": [
       "Anime",
-      "Dramas",
+      "Drama",
       "Fantasy",
       "Criminal",
       "Historical",
-      "Adventures",
+      "Adventure",
       "Comedy",
       "Cartoons",
       "Fantastic",
       "Family",
       "Music",
       "Horrors",
-      "Art house",
       "Musical",
-      "For children"
+      "Children's"
     ],
     "countries": [
       "Soviet",
