--- a/public/locales/ru/countries.json
+++ b/public/locales/ru/countries.json
@@ -1,38 +1,50 @@
 {
-  "aus": "Австралия",
-  "arg": "Аргентина",
-  "arm": "Армения",
-  "bel": "Беларусь",
-  "belg": "Бельгия",
-  "bra": "Бразилия",
-  "greatbr": "Великобритания",
-  "hung": "Венгрия",
-  "ger": "Германия",
-  "hong": "Гонконг",
-  "denm": "Дания",
+  "australia": "Австралия",
+  "argentina": "Аргентина",
+  "austria": "Австрия",
+  "armenia": "Армения",
+  "belarus": "Беларусь",
+  "belgium": "Бельгия",
+  "brazil": "Бразилия",
+  "britain": "Великобритания",
+  "hungary": "Венгрия",
+  "germany": "Германия",
+  "germanygdr": "Германия (ГДР)",
+  "germanyfrg": "Германия (ФРГ)",
+  "hongkong": "Гонконг",
+  "denmark": "Дания",
   "india": "Индия",
-  "irel": "Ирландия",
-  "spa": "Испания",
-  "ita": "Италия",
-  "kaz": "Казахстан",
-  "can": "Канада",
+  "egipt": "Египет",
+  "ireland": "Ирландия",
+  "spain": "Испания",
+  "italy": "Италия",
+  "kazakhstan": "Казахстан",
+  "canada": "Канада",
   "china": "Китай",
-  "col": "Колумбия",
-  "mex": "Мексика",
-  "neth": "Нидерланды",
-  "newzel": "Новая Зеландия",
-  "norw": "Норвегия",
-  "pol": "Польша",
-  "rus": "Россия",
+  "cuba": "Куба",
+  "czechia": "Чехия",
+  "colombia": "Колумбия",
+  "latvia": "Латвия",
+  "mexico": "Мексика",
+  "netherlands": "Нидерланды",
+  "newzeland": "Новая Зеландия",
+  "norway": "Норвегия",
+  "poland": "Польша",
+  "russia": "Россия",
   "ussr": "СССР",
   "usa": "США",
-  "thai": "Таиланд",
-  "turk": "Турция",
-  "fin": "Финляндия",
-  "fra": "Франция",
-  "switz": "Швейцария",
-  "swed": "Швеция",
-  "southaf": "ЮАР",
-  "southkr": "Южная Корея",
-  "jap": "Япония"
+  "thailand": "Таиланд",
+  "turkey": "Турция",
+  "finland": "Финляндия",
+  "france": "Франция",
+  "switzerland": "Швейцария",
+  "sweden": "Швеция",
+  "southafrica": "ЮАР",
+  "southkorea": "Южная Корея",
+  "japan": "Япония",
+  "yugoslavia": "Югославия",
+  "yugoslaviafr": "Югославия (ФР)",
+  "taiwan": "Тайвань",
+  "iran": "Иран",
+  "panama": "Панама"
 }
