--- a/public/locales/ru/dropDownCategory.json
+++ b/public/locales/ru/dropDownCategory.json
@@ -1,31 +1,30 @@
 {
   "movies": {
     "genres": [
-      "Драмы",
-      "Фентези",
+      "Драма",
+      "Фэнтези",
       "История",
       "Приключения",
-      "Комедии",
+      "Комедия",
       "Мелодрама",
-      "Боевики",
+      "Боевик",
       "Фантастика",
-      "Триллеры",
-      "Военные",
-      "Вестерны",
-      "Семейные",
-      "Фильмы-нуар",
+      "Триллер",
+      "Военный",
+      "Вестерн",
+      "Семейный",
+      "Фильм-нуар",
       "Музыка",
       "Ужасы",
-      "Детективы",
-      "Артхаус",
-      "Документальные",
+      "Детектив",
+      "Документальный",
       "Спорт",
-      "Короткометражные",
+      "Короткометражка",
       "Для взрослых"
     ],
     "countries": [
       "Русские",
-      "Зарубежные",
+      "Американские",
       "Советское кино"
     ],
     "years": [
