--- a/public/locales/en/genres.json
+++ b/public/locales/en/genres.json
@@ -1,30 +1,30 @@
 {
   "drama": "Dramas",
-  "fentezi": "Fantasy",
-  "kriminal": "Criminal",
-  "istoriya": "Historical",
-  "priklyucheniya": "Adventures",
-  "komediya": "Comedy",
+  "fantasy": "Fantasy",
+  "criminal": "Criminal",
+  "history": "Historical",
+  "adventure": "Adventures",
+  "comedy": "Comedy",
   "melodrama": "Melodrama",
   "anime": "Anime",
-  "multfilm": "Cartoons",
-  "boevik": "Action",
-  "biografiya": "Biography",
-  "fantastika": "Fantastic",
-  "triller": "Thrillers",
-  "voennyy": "Military",
-  "vestern": "Westerns",
-  "semeynyy": "Family",
-  "film-nuar": "Film noir",
-  "muzyka": "Music",
-  "uzhasy": "Horrors",
-  "detektiv": "Detective",
+  "animatedfilm": "Cartoons",
+  "militant": "Action",
+  "biography": "Biography",
+  "fiction": "Fantastic",
+  "thriller": "Thrillers",
+  "military": "Military",
+  "western": "Westerns",
+  "family": "Family",
+  "filmnoir": "Film noir",
+  "music": "Music",
+  "horror": "Horrors",
+  "detective": "Detective",
   "arthouse": "Art house",
-  "myuzikl": "Musicals",
-  "dokumentalnyy": "Documentary",
+  "musical": "Musicals",
+  "documentary": "Documentary",
   "sport": "Sport",
-  "korotkometrazhka": "Shorts",
-  "realnoe-tv": "Real TV",
-  "dlya-vzroslyh": "For Adults",
-  "detskiy": "For children"
+  "shortfilm": "Shorts",
+  "realitytv": "Reality TV",
+  "adults": "For Adults",
+  "children": "For children"
 }
