feat: server api render

--- a/public/locales/en/movie.json
+++ b/public/locales/en/movie.json
@@ -44,14 +44,14 @@
     "leave": "Leave a comment"
   },
   "creators": {
-    "rezhisser": "Director",
-    "aktyor": "Actor",
-    "scenariy": "Scenery",
-    "prodyuser": "Producer",
-    "aktyor-dublyazha": "Dubbing actor",
-    "hudozhnik": "Painter",
+    "filmmaker": "Director",
+    "actor": "Actor",
+    "scenario": "Scenery",
+    "producer": "Producer",
+    "actordubbing": "Dubbing actor",
+    "painter": "Painter",
     "operator": "Operator",
-    "kompozitor": "Compositor",
+    "composer": "Compositor",
     "directors": "directors",
     "actors": "actors",
     "scenarists": "Scriptwriters",
