--- a/public/locales/ru/movie.json
+++ b/public/locales/ru/movie.json
@@ -44,14 +44,14 @@
     "leave": "Оставить комментарий"
   },
   "creators": {
-    "rezhisser": "Режисер",
-    "aktyor": "Актер",
-    "scenariy": "Сценарий",
-    "prodyuser": "Продюсер",
-    "aktyor-dublyazha": "Актер дубляжа",
-    "hudozhnik": "Художник",
+    "filmmaker": "Режисер",
+    "actor": "Актер",
+    "scenario": "Сценарий",
+    "producer": "Продюсер",
+    "actordubbing": "Актер дубляжа",
+    "painter": "Художник",
     "operator": "Оператор",
-    "kompozitor": "Композитор",
+    "composer": "Композитор",
     "directors": "Режисеры",
     "actors": "Актеры",
     "scenarists": "Сценаристы",
