--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -10,5 +10,10 @@
     "estimate": "Уже смотрел, оценить",
     "block": "Не нравится такое"
   },
-  "more": "Показать еще"
+  "more": "Показать еще",
+  "not_found": {
+    "title": "Страница не найдена",
+    "content": "Такой страницы не существует",
+    "link": "Вернуться на главную ?"
+  }
 }
