--- a/public/locales/en/movie.json
+++ b/public/locales/en/movie.json
@@ -60,5 +60,24 @@
     "painters": "Artists",
     "operators": "operators",
     "compositors": "Composers"
-  }
+  },
+  "movie-decl": [
+    "movie",
+    "movie",
+    "movies"
+  ],
+  "months": [
+    "January",
+    "February",
+    "March",
+    "April",
+    "May",
+    "June",
+    "July",
+    "August",
+    "September",
+    "October",
+    "November",
+    "December"
+  ]
 }
