--- a/public/locales/ru/movie.json
+++ b/public/locales/ru/movie.json
@@ -60,5 +60,24 @@
     "painters": "Художники",
     "operators": "Операторы",
     "compositors": "Композиторы"
-  }
+  },
+  "movie-decl": [
+    "фильм",
+    "фильма",
+    "фильмов"
+  ],
+  "months": [
+    "января",
+    "февраля",
+    "марта",
+    "апреля",
+    "майя",
+    "июня",
+    "июля",
+    "августа",
+    "сентября",
+    "октября",
+    "ноября",
+    "декабря"
+  ]
 }
