--- a/public/locales/ru/filters.json
+++ b/public/locales/ru/filters.json
@@ -20,6 +20,10 @@
     "assessments": "Любое количество оценок",
     "actor": "Все актеры",
     "director": "Все режиссеры"
-  }
+  },
+  "search": "Поиск...",
+  "loading": "Загрузка...",
+  "actornotfound": "Актеров не найдено",
+  "directornotfound": "Режиссеров не найдено",
+  "movienotfound": "Фильмов не найдено"
 }
-
