--- a/public/locales/ru/header.json
+++ b/public/locales/ru/header.json
@@ -91,7 +91,9 @@
       "Настройки",
       "Помощь"
     ],
-    "auth": "Войти или зарегистрироваться"
+    "auth": "Войти или зарегистрироваться",
+    "logout": "Выйти",
+    "logoutMessage": "Вы вышли из аккаунта."
   },
   "notification": "Здесь появляются только важные сообщения",
   "search": "Поиск",
