--- a/public/locales/ru/registration.json
+++ b/public/locales/ru/registration.json
@@ -2,6 +2,7 @@
   "title": "Вход или регистрация",
   "titleRegistration": "Новый пользователь",
   "titleLogin": "Здравствуйте",
+  "toastMessage": "Вы успешно авторизовались.",
   "hintMessage": {
     "title": "Войдите или зарегистрируйтесь",
     "subtitle": "чтобы пользоваться сервисом на любом устройстве"
