refactor: movie info, card

--- a/public/locales/en/movie.json
+++ b/public/locales/en/movie.json
@@ -63,8 +63,13 @@
   },
   "movie-decl": [
     "movie",
-    "movie",
+    "movies",
     "movies"
+  ],
+  "minute-decl": [
+    "minute",
+    "minutes",
+    "minutes"
   ],
   "months": [
     "January",
@@ -79,5 +84,17 @@
     "October",
     "November",
     "December"
-  ]
+  ],
+  "modal": {
+    "backLink": "Back to movie",
+    "tabs": [
+      "Creators",
+      "Reviews"
+    ],
+    "commentsInput": {
+      "placeholder": "Write a review",
+      "submit": "Sew"
+    },
+    "showButton": "Show more"
+  }
 }
