--- a/public/locales/ru/movie.json
+++ b/public/locales/ru/movie.json
@@ -66,6 +66,11 @@
     "фильма",
     "фильмов"
   ],
+  "minute-decl": [
+    "минута",
+    "минуты",
+    "минут"
+  ],
   "months": [
     "января",
     "февраля",
@@ -79,5 +84,17 @@
     "октября",
     "ноября",
     "декабря"
-  ]
+  ],
+  "modal": {
+    "backLink": "К фильму",
+    "tabs": [
+      "Создатели",
+      "Отзывы"
+    ],
+    "commentsInput": {
+      "placeholder": "Написать отзыв",
+      "submit": "Отправить"
+    },
+    "showButton": "Показать ещё"
+  }
 }
