feat: banner compilations, player trailer

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -27,8 +27,8 @@
     "promo": "Discover the opportunity to watch movies online for free in excellent quality with the Ivy cinema!"
   },
   "compilations": {
-    "subscribe": "Top movies in subscription",
-    "comedy": "Best comedies"
+    "militants": "Best militants",
+    "comedies": "Best comedies"
   },
   "top": {
     "title": "per week"
