--- a/public/locales/ru/home.json
+++ b/public/locales/ru/home.json
@@ -27,8 +27,8 @@
     "promo": "Откройте для себя возможность смотреть фильмы онлайн бесплатно в отличном качестве с кинотеатром Иви!"
   },
   "compilations": {
-    "subscribe": "Лучшие фильмы в подписке",
-    "comedy": "Лучшие комедии"
+    "militants": "Лучшие боевики",
+    "comedies": "Лучшие комедии"
   },
   "top": {
     "title": "за неделю"
