feat: add movie translate file in catalog

--- a/public/locales/en/movie.json
+++ b/public/locales/en/movie.json
@@ -2,7 +2,8 @@
   "rating": {
     "title": "Kinopoisk rating",
     "estimate": "Estimate",
-    "grades": "amount grades"
+    "grades": "amount grades",
+    "name": "rating"
   },
   "medallions": {
     "rating": "Kinopoisk",
